src/buffers/snapshots/freya_ob__buffers__reversed_vec__tests__reversed_vec_basic_operations.snap
---
source: src/buffers/reversed_vec.rs
expression: "&buffer"
---
ReversedVec {
    buf: [
        Level {
            price: FixedDecimal {
                raw: 100000000000000,
            },
            size: FixedDecimal {
                raw: 10000000000000,
            },
        },
        Level {
            price: FixedDecimal {
                raw: 900000000000000,
            },
            size: FixedDecimal {
                raw: 20000000000000,
            },
        },
        Level {
            price: FixedDecimal {
                raw: 800000000000000,
            },
            size: FixedDecimal {
                raw: 30000000000000,
            },
        },
        Level {
            price: FixedDecimal {
                raw: 9223372036854775807,
            },
            size: FixedDecimal {
                raw: 0,
            },
        },
        Level {
            price: FixedDecimal {
                raw: 9223372036854775807,
            },
            size: FixedDecimal {
                raw: 0,
            },
        },
        Level {
            price: FixedDecimal {
                raw: 9223372036854775807,
            },
            size: FixedDecimal {
                raw: 0,
            },
        },
        Level {
            price: FixedDecimal {
                raw: 9223372036854775807,
            },
            size: FixedDecimal {
                raw: 0,
            },
        },
        Level {
            price: FixedDecimal {
                raw: 9223372036854775807,
            },
            size: FixedDecimal {
                raw: 0,
            },
        },
        Level {
            price: FixedDecimal {
                raw: 9223372036854775807,
            },
            size: FixedDecimal {
                raw: 0,
            },
        },
        Level {
            price: FixedDecimal {
                raw: 9223372036854775807,
            },
            size: FixedDecimal {
                raw: 0,
            },
        },
    ],
    limit: FixedDecimal {
        raw: 9223372036854775807,
    },
    len: 3,
    cached_first: Some(
        Level {
            price: FixedDecimal {
                raw: 100000000000000,
            },
            size: FixedDecimal {
                raw: 10000000000000,
            },
        },
    ),
}
